--- a/user/index.html
+++ b/user/index.html
@@ -50,7 +50,7 @@
         <h2>2. ログイン</h2>
         <figure class="screenshot">
           <img src="../assets/images/login.png" alt="ログイン画面のスクリーンショット" loading="lazy">
-          <figcaption>1) ログイン画面（画像を差し替えてください）</figcaption>
+          <figcaption>1) ログイン画面</figcaption>
         </figure>
         <ol>
           <li>ブラウザで <code>https://&lt;フロントエンドURL&gt;/login</code> にアクセスします。</li>
